--- a/client/index.html
+++ b/client/index.html
@@ -30,9 +30,7 @@
     <form id="form_new_memo" method="post">
       <div class="form-group">
         <label for="content">Input your content :</label>
-        <textarea class="form-control" id="content" style="resize:none;">
-
-        </textarea>
+        <textarea class="form-control" id="content" style="resize:none;"></textarea>
       </div>
       <button type="button" class="btn btn-info" id="btn_update_memo">Update</button>
       <button type="button" class="btn btn-success" id="btn_add_memo">Submit</button>
